--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This project is a rogue like game in the terminal. It will include dungeons, monsters, and items that are randomly generated. When the player dies the restart from level one with nothing.
+This project is a rogue like game in the terminal. It will include dungeons, monsters, and items that are randomly generated. When the player dies they restart from level one with nothing.
